@@ -1,4 +1,3 @@
-Remove deprecated PlatformInfo[GetConfigureCommandLine] in 1.11
 Remove deprecated MonteCarlo, ImportanceSampling, QuasiMonteCarlo, RandomizedQuasiMonteCarlo, RandomizedLHS aliases in 1.12
 Remove deprecated Field::getSample in 1.11
 Remove deprecated SobolIndicesAlgorithm::Generate method in 1.11
